# DSP2

./: .cursorrules  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
bindings/: bind_python.cpp
build_test/: CTestTestfile.cmake  test_phase1
core/: buffer_ops.hpp  constants.hpp  engine.cpp  engine.hpp  fast_math.hpp  fft.hpp  graph.cpp  graph.hpp  logger.hpp  node_base.hpp  node_factory.hpp
dev_panel/: audio_to_midi.py  compare_simulations.py  frequency_to_midi_demo.mid  frequency_to_midi_demo.py  signal_tester.py
docs/: AGENTS.md  CLAUDE.md  DESCRIPTION.md  GRAPH_ROUTING.md  PLANEJAMENTO.md  STANDARDS.md  STATE_OF_ART.md  api.md  node-template.md
dsp2/: audio_io.py  audio_to_midi.py  build_graph.py  constants.py  graph_loader.py  midi_io.py
nodes_cpp/: audio_file_input.hpp  butterworth_filter.hpp  convolution.hpp  decimator.hpp  dummy_nodes.hpp  frequency_to_midi_note.hpp  harmonic_pitch_detector.hpp  lut_oscillator.hpp  math_nodes.hpp  noise_generator.hpp  oscillator_nodes.hpp  quadrature_modulator.hpp  spectral_peak_picker.hpp  spectrum_analyser.hpp  windowing.hpp
scripts/: check.sh
tests/: advanced_test.json  advanced_test_modified.json  graph_test.json  math_test.json  test_buffer_ops.cpp  test_compare_simulations.py  test_engine_graph.cpp  test_graph_routing.cpp  test_logger.cpp  test_midi_io.py  test_nodes_cpp.cpp  test_phase1.cpp  test_phase2.cpp  test_python_e2e.py  test_signal_report.py
